--- a/project/index.html
+++ b/project/index.html
@@ -6,29 +6,30 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div class="lista">
+        <div class="title">
         <h1> Ligações Químicas </h1>
         </div>
 
-        <div class="tópicos"
-        <ol>
-            <li> <a href="#1"> Porque os átomos se ligam </a> </li>
-            <li> <a href="#2"> Regra do Octeto</a> </li>
-            <li> <a href="#3"> Tipos de ligações </a></li>
+        <div class="list">
             <ol>
-                <li> <a href="#3.1"> Ligação Iônica </a> </li>
-                <li> <a href="#3.2"> Ligação Metálica </a> </li>
-                <li> <a href="#3.2"> Ligação Covalente </a> </li>
+                <li> <a href="#1"> Porque os átomos se ligam </a> </li>
+                <li> <a href="#2"> Regra do Octeto</a> </li>
+                <li> <a href="#3"> Tipos de ligações </a>
+                    <ul>
+                        <li> <a href="#3.1"> Ligação Iônica </a> </li>
+                        <li> <a href="#3.2"> Ligação Metálica </a> </li>
+                        <li> <a href="#3.2"> Ligação Covalente </a> </li>
+                    </ul>
+                </li>
             </ol>
         </div>
-
-        <div class="saber">
+        <div class="tittle">
         <h1> O que saber sobre ligações químicas </h1>
         </div>
-        <div class="atom">
+        <div class="sub_title">
             <h2 id="1"> Por que os átomos se ligam? </h2>
-                <div class="atom_explicação">
-                    <img src="noble.jpg" alt="g18"  />
+                <div class="explanation">
+                    <img src="noble.jpg" alt="g18"/>
                     <p>
                     Toda matéria é formada por átomos. Os átomos podem se ligar uns aos outros de diferentes maneiras para formar substâncias diferentes. Quando dois átomos se combinam entre si dizemos que ocorreu uma ligação química.
                     A gente sabe que eles não se unem por fio ou abraço ou nada...eles se unem através de uma ligação química! Mas porque afinal?
@@ -38,9 +39,9 @@
                 </div>
         </div>
         <br>
-        <div class="octeto">
+        <div class="sub_title">
             <h2 id="2"> Regra do octeto </h2>
-            <div class="octeto_explicação">
+            <div class="explanation">
                 <p>
                 Por causa dessa busca dos átomos pela mesma estabilidade dos gases nobres se criou um regra, a chamada regra do octeto.
                 Nada mais é que o descrito acima, mas repetindo...<br>
@@ -48,9 +49,9 @@
             </div>
         </div>
         <br>
-        <div class="tipos">
+        <div class="sub_title">
             <h2 id="3"> Tipos de ligações </h2>
-            <div class="tipos_ligação">
+            <div class="explanation">
                 <p>
                 As ligações químicas são formadas pela interação dos elétrons do último nível (nível de valência ou camada de valência). Assim, para que ocorra uma ligação química, os átomos precisam perder ou ganhar elétrons ou, então, compartilhar seus elétrons, para atingir o mesmo número na camada de valência que os gases nobres.
                 </p>
@@ -60,8 +61,8 @@
             </div>
 
             <h3 id="3.1"> 1.Ligações Iônicas </h3>
-            <div class="descrição_lig_ion">
-                <img src="ionicbond.jpg" alt="ionic_bond"></img>
+            <div class="description">
+                <img src="ionicbond.jpg" alt="ionic_bond"/>
                 <p>
             Ocorre entre metais e não-metais. Metais tem a tendência a perder elétrons do último nível de energia, tornado-se cátions (carga +). Não-metais tem a tendência a ganhar elétrons no último nível de energia,  tornando-se ânions (carga -).
                 </p>
@@ -71,7 +72,7 @@
             </div>
 
             <h3 id="3.2"> 2.Ligações Metálica </h3>
-            <div class="descrição_lig_metálica">
+            <div class="description">
                 <p>
                     A ligação metálica ocorre entre átomos de metais.
                 </p>
@@ -82,7 +83,7 @@
             </div>
 
             <h3 id="3.3"> 3.Ligações Covalente </h3>
-            <div class="descrição_lig_covalente">
+            <div class="description">
                 <p>
                     Para explicar a ligação covalente vamos usar como exemplo o átomo de cloro.
                 </p>
