Revisão projeto web page
Validador CSS;
Alteração descrição "alt".

--- a/project/index.html
+++ b/project/index.html
@@ -6,9 +6,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div class="title">
         <h1> Ligações Químicas </h1>
-        </div>
 
         <div class="list">
             <ol>
@@ -23,13 +21,13 @@
                 </li>
             </ol>
         </div>
-        <div class="tittle">
+        
         <h1> O que saber sobre ligações químicas </h1>
-        </div>
+
         <div class="sub_title">
             <h2 id="1"> Por que os átomos se ligam? </h2>
                 <div class="explanation">
-                    <img src="noble.jpg" alt="g18"/>
+                    <img src="noble.jpg" alt="piada_gasesnobres"/>
                     <p>
                     Toda matéria é formada por átomos. Os átomos podem se ligar uns aos outros de diferentes maneiras para formar substâncias diferentes. Quando dois átomos se combinam entre si dizemos que ocorreu uma ligação química.
                     A gente sabe que eles não se unem por fio ou abraço ou nada...eles se unem através de uma ligação química! Mas porque afinal?
@@ -46,6 +44,7 @@
                 Por causa dessa busca dos átomos pela mesma estabilidade dos gases nobres se criou um regra, a chamada regra do octeto.
                 Nada mais é que o descrito acima, mas repetindo...<br>
                 Os átomos se unem uns aos outros para buscar a estabilidade dos gases nobres, isso significa que eles querem completar o último nível de energia (camada de valência) com os 8 elétrons. Com exceção o hidrogênio, que fica estável com 2 elétrons na último nível assim como o hélio.
+                </p>
             </div>
         </div>
         <br>
@@ -58,6 +57,7 @@
                 <p>
                     Para saber mais sobre ligações químicas, de uma forma simples e divertida, vale a pena acessar
                     o site da <a href="http://lab.ccead.puc-rio.br/condigital/"> PUC-Rio </a>.
+                </p>
             </div>
 
             <h3 id="3.1"> 1.Ligações Iônicas </h3>
