--- a/project/index.html
+++ b/project/index.html
@@ -21,13 +21,13 @@
                 </li>
             </ol>
         </div>
-        
+
         <h1> O que saber sobre ligações químicas </h1>
 
         <div class="sub_title">
             <h2 id="1"> Por que os átomos se ligam? </h2>
                 <div class="explanation">
-                    <img src="noble.jpg" alt="piada_gasesnobres"/>
+                    <img src="noble.jpg" alt="Piada sobre gases nobres"/>
                     <p>
                     Toda matéria é formada por átomos. Os átomos podem se ligar uns aos outros de diferentes maneiras para formar substâncias diferentes. Quando dois átomos se combinam entre si dizemos que ocorreu uma ligação química.
                     A gente sabe que eles não se unem por fio ou abraço ou nada...eles se unem através de uma ligação química! Mas porque afinal?
