--- a/project/index.html
+++ b/project/index.html
@@ -62,7 +62,7 @@
 
             <h3 id="3.1"> 1.Ligações Iônicas </h3>
             <div class="description">
-                <img src="ionicbond.jpg" alt="ionic_bond"/>
+                <img src="ionicbond.jpg" alt="Esquema mostrando como acontece a ligação iônica"/>
                 <p>
             Ocorre entre metais e não-metais. Metais tem a tendência a perder elétrons do último nível de energia, tornado-se cátions (carga +). Não-metais tem a tendência a ganhar elétrons no último nível de energia,  tornando-se ânions (carga -).
                 </p>
